config-root/namespaces/jx-staging/godemo60/deployment.yaml
# Source: godemo60/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: godemo60-godemo60
  labels:
    draft: draft-app
    chart: "godemo60-0.0.6"
    gitops.jenkins-x.io/pipeline: 'environment'
  namespace: jx-staging
  annotations:
    wave.pusher.com/update-on-config-change: 'true'
spec:
  selector:
    matchLabels:
      app: godemo60-godemo60
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: godemo60-godemo60
    spec:
      containers:
      - name: godemo60
        image: "gcr.io/jstrachan-multicluster/godemo60:0.0.6"
        imagePullPolicy: IfNotPresent
        envFrom: null
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 100m
            memory: 256Mi
          requests:
            cpu: 80m
            memory: 128Mi
      terminationGracePeriodSeconds:
