config-root/namespaces/jx-staging/godemo60/service.yaml
# Source: godemo60/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: godemo60
  labels:
    chart: "godemo60-0.0.6"
    gitops.jenkins-x.io/pipeline: 'environment'
  annotations:
    fabric8.io/expose: "true"
    fabric8.io/ingress.annotations: 'kubernetes.io/ingress.class: nginx'
  namespace: jx-staging
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: godemo60-godemo60
